# sly

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  PRD.md  README.md  ROADMAP.md  TASKS.md  USER_MANUAL.md  WORKFLOW.md  check_log.txt  {
.ralph/lancedb/cozo.db/data/: IDENTITY  LOG
src/: api_server.rs  benchmarker.rs  daemon.rs  debate.rs  fingerprint.rs  git_context.rs  janitor.rs  knowledge.rs  learn_check.rs  lib.rs  lint.rs  main.rs  mcp_client.rs  memory_legacy.rs  qa.rs  reflexion.rs  replicator.rs  swarm.rs  wasm_runtime.rs
src/core/: agent.rs  bus.rs  cortex.rs  directives.rs  fs.rs  interpreter.rs  loop.rs  mod.rs  parser.rs  session.rs  state.rs  supervisor.rs
src/engine/: mod.rs  reflexion.rs
src/io/: events.rs  mod.rs  telegram.rs  telemetry.rs  watcher.rs
src/knowledge/: extractor.rs  mod.rs  parser.rs  registry.rs  scanner.rs
src/mcp/: client.rs  mod.rs  registry.rs  transport.rs  types.rs
src/memory/: adapter.rs  backend_cozo.rs  cozo.rs  engine_candle.rs  mod.rs  store_graph.rs
src/safety/: mod.rs  overlay.rs  security.rs  shadow.rs
