[package]
name = "sly"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "sly"
path = "src/main.rs"

[[bin]]
name = "sly-learn"
path = "src/learn_check.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
async-trait = "0.1.89"

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
html2text = "0.16.6"
scraper = "0.25.0"
url = "2.5.8"

# Database & Vectors
cozo = { version = "0.7.6", features = ["storage-rocksdb"] }
# fastembed = "4" # Removed in favor of Candle for Metal support
candle-core = { version = "0.9.2-alpha.2", features = ["metal"] }
candle-nn = { version = "0.9.2-alpha.2", features = ["metal"] }
candle-transformers = { version = "0.9.2-alpha.2", features = ["metal"] }
tokenizers = { version = "0.22.2", features = ["onig"] }
hf-hub = "0.4.3"

# Utilities
walkdir = "2.5.0"
regex = "1.12.2"
colored = "3.1.1"
anyhow = "1.0.100"
dotenvy = "0.15.7" # dotenv replacement for maintenance
chrono = { version = "0.4.43", features = ["serde"] }
rayon = "=1.10.0"
ndarray = "0.15.6"
dirs = "6.0.0"
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
fs_extra = "1.3.0"
similar = "2.7.0"
syn = { version = "2.0.114", features = ["full", "extra-traits", "visit"] }
quote = "1.0.43"
base64 = "0.22.1"
sha2 = "0.10"
hex = "0.4.3"
wasmtime = "29.0"
wasmtime-wasi = { version = "29.0", features = ["preview1"] }

# TUI Dashboard
ratatui = "0.30.0"
crossterm = "0.29.0"

# HTTP/WebSocket Server (v2.0.0 NL APIs)
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tokio-tungstenite = "0.28.0"

# File Watching (Daemon Mode)
notify = "8.2.0"

# Git Integration
git2 = "0.20.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
