[package]
name = "sly"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "sly"
path = "src/main.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async Runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
async-trait = "0.1.89"

# Networking
reqwest = { version = "0.13.1", features = ["json", "rustls", "stream"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
html2text = "0.16.6"
scraper = "0.25.0"
url = "2.5.8"

# Database & Vectors
cozo = { version = "0.7.6", features = ["storage-rocksdb"] }
candle-core = { version = "0.9.2-alpha.2", features = ["metal"] }
candle-nn = { version = "0.9.2-alpha.2", features = ["metal"] }
candle-transformers = { version = "0.9.2-alpha.2", features = ["metal"] }
tokenizers = { version = "0.22.2", features = ["onig"] }
hf-hub = "0.4.3"

# Utilities
walkdir = "2.5.0"
regex = "1.12.2"
colored = "3.1.1"
anyhow = "1.0.100"
dotenvy = "0.15.7"
chrono = { version = "0.4.43", features = ["serde"] }
rayon = "=1.10.0"
ndarray = "=0.15.6"
dirs = "6.0.0"
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
fs_extra = "1.3.0"
similar = "2.7.0"
syn = { version = "2.0.114", features = ["full", "visit"] }
quote = "1.0.43"
base64 = "0.22.1"
sha2 = "0.11.0-rc.3"
hex = "0.4.3"

# File Watching (Daemon Mode)
notify = "8.2.0"





# [profile.release]
# lto = false
# codegen-units = 1
# panic = "abort"
# strip = "debuginfo"
